; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_pmap-v4.c_pmap_l2ptp_ctor.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_pmap-v4.c_pmap_l2ptp_ctor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l2_bucket = type { i32* }

@PAGE_MASK = common dso_local global i32 0, align 4
@kernel_pmap = common dso_local global i32 0, align 4
@L2_S_CACHE_MASK = common dso_local global i32 0, align 4
@pte_l2_s_cache_mode_pt = common dso_local global i32 0, align 4
@L2_TABLE_SIZE_REAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*, i32)* @pmap_l2ptp_ctor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pmap_l2ptp_ctor(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.l2_bucket*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = ptrtoint i8* %13 to i32
  %15 = load i32, i32* @PAGE_MASK, align 4
  %16 = xor i32 %15, -1
  %17 = and i32 %14, %16
  store i32 %17, i32* %12, align 4
  %18 = load i32, i32* @kernel_pmap, align 4
  %19 = load i32, i32* %12, align 4
  %20 = call %struct.l2_bucket* @pmap_get_l2_bucket(i32 %18, i32 %19)
  store %struct.l2_bucket* %20, %struct.l2_bucket** %9, align 8
  %21 = load %struct.l2_bucket*, %struct.l2_bucket** %9, align 8
  %22 = getelementptr inbounds %struct.l2_bucket, %struct.l2_bucket* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i32, i32* %12, align 4
  %25 = call i64 @l2pte_index(i32 %24)
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  store i32* %26, i32** %10, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %11, align 4
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* @L2_S_CACHE_MASK, align 4
  %31 = and i32 %29, %30
  %32 = load i32, i32* @pte_l2_s_cache_mode_pt, align 4
  %33 = icmp ne i32 %31, %32
  br i1 %33, label %34, label %47

34:                                               ; preds = %4
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* @L2_S_CACHE_MASK, align 4
  %37 = xor i32 %36, -1
  %38 = and i32 %35, %37
  %39 = load i32, i32* @pte_l2_s_cache_mode_pt, align 4
  %40 = or i32 %38, %39
  %41 = load i32*, i32** %10, align 8
  store i32 %40, i32* %41, align 4
  %42 = load i32*, i32** %10, align 8
  %43 = call i32 @PTE_SYNC(i32* %42)
  %44 = load i32, i32* %12, align 4
  %45 = call i32 @cpu_tlb_flushD_SE(i32 %44)
  %46 = call i32 (...) @cpu_cpwait()
  br label %47

47:                                               ; preds = %34, %4
  %48 = load i8*, i8** %5, align 8
  %49 = load i32, i32* @L2_TABLE_SIZE_REAL, align 4
  %50 = call i32 @memset(i8* %48, i32 0, i32 %49)
  %51 = load i8*, i8** %5, align 8
  %52 = load i32, i32* @L2_TABLE_SIZE_REAL, align 4
  %53 = sext i32 %52 to i64
  %54 = udiv i64 %53, 4
  %55 = trunc i64 %54 to i32
  %56 = call i32 @PTE_SYNC_RANGE(i8* %51, i32 %55)
  ret i32 0
}

declare dso_local %struct.l2_bucket* @pmap_get_l2_bucket(i32, i32) #1

declare dso_local i64 @l2pte_index(i32) #1

declare dso_local i32 @PTE_SYNC(i32*) #1

declare dso_local i32 @cpu_tlb_flushD_SE(i32) #1

declare dso_local i32 @cpu_cpwait(...) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @PTE_SYNC_RANGE(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
